--- a/addon/components/el-card-header.hbs
+++ b/addon/components/el-card-header.hbs
@@ -1,7 +1,5 @@
 <div class="clearfix">
-  <span>
-    {{title}}
-  </span>
+  <span>{{this.title}}</span>
   {{#if (has-block)}}
     {{yield}}
   {{/if}}
