--- a/addon/components/el-input.hbs
+++ b/addon/components/el-input.hbs
@@ -4,17 +4,17 @@
   )
 }}
 
-{{input
-  tabindex=this.tabindex
-  class=(concat "el-input__inner " this.customClass)
-  type=this.type
-  disabled=this.disabled
-  readonly=this.readonly
-  autocomplete=this.autocomplete
-  name=this.name
-  value=this.value
-  placeholder=this.placeholder
-}}
+<Input
+  @tabindex={{this.tabindex}}
+  class={{concat "el-input__inner " this.customClass}}
+  @type={{this.type}}
+  disabled={{this.disabled}}
+  @readonly={{this.readonly}}
+  @autocomplete={{this.autocomplete}}
+  @name={{this.name}}
+  @value={{this.value}}
+  placeholder={{this.placeholder}}
+/>
 
 {{#if this.prefixIcon}}
   <span class="el-input__prefix">
