updated theme chalk version and started converting components to octane

--- a/addon/components/el-badge.hbs
+++ b/addon/components/el-badge.hbs
@@ -1,9 +1,10 @@
-{{yield}}
-{{#if this.isShow}}
-  <sup
-    class=" el-badge__content el-badge--content--{{this.type}} {{if this.isDot "is-dot"}} {{if (has-block) "is-fixed"}}"
-  >
-    {{this.content}}
-  </sup>
-{{/if}}
-
+<div class="el-badge" ...attributes>
+  {{yield}}
+  {{#if this.isShow}}
+    <sup
+      class=" el-badge__content el-badge__content--{{this.type}} {{if this.args.isDot "is-dot"}} {{if (has-block) "is-fixed"}}"
+    >
+      {{this.content}}
+    </sup>
+  {{/if}}
+</div>
