--- a/addon/components/el-card-header.hbs
+++ b/addon/components/el-card-header.hbs
@@ -1,5 +1,5 @@
-<div class="clearfix">
-  <span>{{this.title}}</span>
+<div class="el-card__header clearfix" ...attributes>
+  <span>{{@title}}</span>
   {{#if (has-block)}}
     {{yield}}
   {{/if}}
