--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -48,6 +48,7 @@ h2 {
 h3 {
   font-size: 22px;
 }
+
 .h1 {
   font-size: 20px;
 }
@@ -145,9 +146,11 @@ a {
   font-size: 18px;
   vertical-align: middle;
 }
-.el-message{
+
+.el-message {
   z-index: 10;
 }
+
 table {
   width: 100%;
 }
@@ -165,16 +168,18 @@ table {
 }
 
 
-.ember-element-box{
+.ember-element-box {
   z-index: 2100;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.clearfix{
-  &:before,&:after{
-    display: table; content: "";
+.clearfix {
+  &:before, &:after {
+    display: table;
+    content: "";
   }
-  &:after{
+
+  &:after {
     clear: both
   }
 }
@@ -283,5 +288,18 @@ table {
 .fadeOut50 {
   animation-name: fadeOut50;
   animation-duration: 500ms;
+}
 
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: 0.85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
 }
