--- a/addon/components/el-card.hbs
+++ b/addon/components/el-card.hbs
@@ -1,6 +1,8 @@
-{{yield
-  (hash
-    header=(component "el-card-header" object=@object bodyStyle=@bodyStyle)
-    body=(component "el-card-body" object=@object bodyStyle=@bodyStyle)
-  )
-}}
+<div class="el-card {{this.classes}}" ...attributes>
+  {{yield
+    (hash
+      header=(component "el-card-header")
+      body=(component "el-card-body")
+    )
+  }}
+</div>
